[FIX]Sistemato la scrollbar in basso

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,6 @@
     height: 100%;
     padding-top: 60px;
     padding-left: 150px;
-    width: 100vw;
     background-color: rgb(247, 247, 247);;
  }
  .fs_custom{
